--- a/es/poll.css
+++ b/es/poll.css
@@ -11,6 +11,23 @@
   min-width: 400px;
   min-width: var(--poll-min-width, 400px);
   padding: 20px;
+  position: relative;
+}
+
+.poll_edit__19zG5 {
+  border: 1px dashed #ff7256;
+  border: 1px dashed #ff7256;
+  border: 1px dashed var(--poll-edit-border-color, var(--persimmon, #ff7256));
+}
+
+.poll_actions__2gJK4 {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.poll_actions__2gJK4 > * {
+  cursor: pointer;
 }
 
 .poll_image__3JUuN,
@@ -34,14 +51,6 @@
 .poll_question__2TYdh {
   font-weight: bold;
   margin-bottom: 20px;
-}
-
-.poll_variant__1sPEb {
-  /* margin-bottom: 10px; */
-}
-
-.poll_result__2DBY- {
-  /* margin-bottom: 10px; */
 }
 
 .poll_text__3qvjW,
@@ -71,6 +80,10 @@
   color: #48a1e6;
   color: var(--result-active-color, var(--pictonBlue, #48a1e6));
   font-weight: bold;
+}
+
+.button_root__3QOnQ {
+  font-size: 16px;
 }
 
 .radio_root__37Zse.radio_root__37Zse {
@@ -120,111 +133,6 @@ input[type="radio"]:checked {
   box-shadow: inset 0 2px 0 0 var(--progress-color, var(--shadow, rgba(0, 0, 0, 0.06)));
   height: inherit;
 }
-
-.button_root__3QOnQ {
-  font-size: 16px;
-}
-
-.Radio_root__3q-Fe + .Radio_root__3q-Fe {
-  margin-top: 15px; }
-
-.Radio_root__3q-Fe {
-  display: inline-flex;
-  align-items: baseline;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  color: #a3a9b1;
-  cursor: pointer; }
-
-.Radio_root__3q-Fe svg {
-    position: relative;
-    top: 2px;
-    flex-shrink: 0; }
-
-.Radio_root__3q-Fe svg path {
-      fill: #727D8A; }
-
-.Radio_root__3q-Fe svg rect {
-      stroke: #727D8A; }
-
-.Radio_checked__k_4wK {
-  color: #4a4a4a; }
-
-.Radio_checked__k_4wK svg circle {
-    stroke: #48A1E6; }
-
-.Radio_checked__k_4wK svg circle:last-child {
-    fill: #48A1E6; }
-
-.Radio_disabled__2kKCd {
-  cursor: not-allowed;
-  color: #D4D4D4; }
-
-.Radio_disabled__2kKCd svg circle {
-    stroke: #D4D4D4; }
-
-.Radio_checked__k_4wK.Radio_disabled__2kKCd svg circle:last-child {
-  fill: #D4D4D4; }
-
-.Radio_error__1iOPM svg circle {
-  fill: #ffeef0;
-  stroke: #ffa3a3; }
-
-.Radio_error__1iOPM.Radio_checked__k_4wK svg circle:last-child {
-  fill: #ffa3a3; }
-
-.Radio_input__3oodI {
-  display: none;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none; }
-
-.Radio_label__3WdOV {
-  margin-left: 10px;
-  cursor: pointer; }
-
-/* Radio Group */
-
-.Radio_group__-rWli {
-  display: flex;
-  flex-direction: column;
-  line-height: normal; }
-
-@media (min-width: 768px) {
-  .Radio_inline__3GiCm {
-    display: flex;
-    align-items: center;
-    flex-direction: row; }
-    .Radio_inline__3GiCm .Radio_root__3q-Fe {
-      display: inline-flex; }
-    .Radio_inline__3GiCm .Radio_root__3q-Fe + .Radio_root__3q-Fe {
-      margin-top: 0;
-      margin-left: 20px; } }
-
-/* Size */
-
-.Radio_size-small__2qOYx {
-  font-size: 14px; }
-
-.Radio_size-small__2qOYx svg {
-    width: 14px;
-    height: 14px; }
-
-.Radio_size-medium__3Sjyl {
-  font-size: 16px; }
-
-.Radio_size-medium__3Sjyl svg {
-    width: 16px;
-    height: 16px; }
-
-.Radio_size-large__2XoL2 {
-  font-size: 18px; }
-
-.Radio_size-large__2XoL2 svg {
-    width: 18px;
-    height: 18px; }
 
 /**
  * Screen breakpoints
@@ -979,6 +887,107 @@ input[type="radio"]:checked {
   display: inline-block;
   line-height: 1;
   vertical-align: middle; }
+
+.Radio_root__3q-Fe + .Radio_root__3q-Fe {
+  margin-top: 15px; }
+
+.Radio_root__3q-Fe {
+  display: inline-flex;
+  align-items: baseline;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: #a3a9b1;
+  cursor: pointer; }
+
+.Radio_root__3q-Fe svg {
+    position: relative;
+    top: 2px;
+    flex-shrink: 0; }
+
+.Radio_root__3q-Fe svg path {
+      fill: #727D8A; }
+
+.Radio_root__3q-Fe svg rect {
+      stroke: #727D8A; }
+
+.Radio_checked__k_4wK {
+  color: #4a4a4a; }
+
+.Radio_checked__k_4wK svg circle {
+    stroke: #48A1E6; }
+
+.Radio_checked__k_4wK svg circle:last-child {
+    fill: #48A1E6; }
+
+.Radio_disabled__2kKCd {
+  cursor: not-allowed;
+  color: #D4D4D4; }
+
+.Radio_disabled__2kKCd svg circle {
+    stroke: #D4D4D4; }
+
+.Radio_checked__k_4wK.Radio_disabled__2kKCd svg circle:last-child {
+  fill: #D4D4D4; }
+
+.Radio_error__1iOPM svg circle {
+  fill: #ffeef0;
+  stroke: #ffa3a3; }
+
+.Radio_error__1iOPM.Radio_checked__k_4wK svg circle:last-child {
+  fill: #ffa3a3; }
+
+.Radio_input__3oodI {
+  display: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none; }
+
+.Radio_label__3WdOV {
+  margin-left: 10px;
+  cursor: pointer; }
+
+/* Radio Group */
+
+.Radio_group__-rWli {
+  display: flex;
+  flex-direction: column;
+  line-height: normal; }
+
+@media (min-width: 768px) {
+  .Radio_inline__3GiCm {
+    display: flex;
+    align-items: center;
+    flex-direction: row; }
+    .Radio_inline__3GiCm .Radio_root__3q-Fe {
+      display: inline-flex; }
+    .Radio_inline__3GiCm .Radio_root__3q-Fe + .Radio_root__3q-Fe {
+      margin-top: 0;
+      margin-left: 20px; } }
+
+/* Size */
+
+.Radio_size-small__2qOYx {
+  font-size: 14px; }
+
+.Radio_size-small__2qOYx svg {
+    width: 14px;
+    height: 14px; }
+
+.Radio_size-medium__3Sjyl {
+  font-size: 16px; }
+
+.Radio_size-medium__3Sjyl svg {
+    width: 16px;
+    height: 16px; }
+
+.Radio_size-large__2XoL2 {
+  font-size: 18px; }
+
+.Radio_size-large__2XoL2 svg {
+    width: 18px;
+    height: 18px; }
 
 /**
  * Screen breakpoints
