--- a/lib/atoms/progress.css
+++ b/lib/atoms/progress.css
@@ -1,8 +1,8 @@
 .root.root {
-  background-color: var(--poll-border-color, var(--mercury, #e9e9e9));
+  background-color: var(--poll-progress-bg-color, var(--mercury, #e9e9e9));
   border-radius: 5px;
-  box-shadow: inset 0 2px 0 0 var(--progress-color, var(--shadow, rgba(0, 0, 0, 0.06)));
-  color: var(--progress-color, var(--onahau, #c6e6ff));
+  box-shadow: inset 0 2px 0 0 var(--poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
+  color: var(--poll-progress-color, var(--onahau, #c6e6ff));
   height: 32px;
   position: relative;
   width: 100%;
@@ -10,6 +10,6 @@
 
 .bar.bar {
   border-radius: 5px 0 0 5px;
-  box-shadow: inset 0 2px 0 0 var(--progress-color, var(--shadow, rgba(0, 0, 0, 0.06)));
+  box-shadow: inset 0 2px 0 0 var(--poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
   height: inherit;
 }
