--- a/lib/atoms/progress.css
+++ b/lib/atoms/progress.css
@@ -1,8 +1,8 @@
 .root.root {
-  background-color: var(--poll-progress-bg-color, var(--mercury, #e9e9e9));
+  background-color: var(--poll-progress-bg-color, var(--wildSand, #f6f6f6));
   border-radius: 5px;
   box-shadow: inset 0 2px 0 0 var(--poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
-  color: var(--poll-progress-color, var(--onahau, #c6e6ff));
+  color: var(--poll-progress-color, var(--mystic, #e7e9f2));
   height: 32px;
   position: relative;
   width: 100%;
@@ -10,6 +10,16 @@
 
 .bar.bar {
   border-radius: 5px 0 0 5px;
-  box-shadow: inset 0 2px 0 0 var(--poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
+  box-shadow: inset 0 2px 0 0 var(--poll-progress-bar-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
   height: inherit;
+}
+
+.root.root.active {
+  background-color: var(--poll-progress-bg-color-active, var(--wildSand, #f6f6f6));
+  color: var(--poll-progress-color-active, var(--mystic, #e7e9f2));
+}
+
+.root.root.selected {
+  background-color: var(--poll-progress-bg-color-selected, var(--wildSand, #f6f6f6));
+  color: var(--poll-progress-color-selected, var(--pattensBlue, #d4ecff));
 }
