--- a/lib/atoms/progress.css
+++ b/lib/atoms/progress.css
@@ -1,9 +1,14 @@
+:root {
+  --min-height: var(--poll-progress-min-height, 32px);
+}
+
 .root.root {
   background-color: var(--poll-progress-bg-color, var(--wildSand, #f6f6f6));
   border-radius: 5px;
   box-shadow: inset 0 2px 0 0 var(--poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
   color: var(--poll-progress-color, var(--mystic, #e7e9f2));
-  height: 32px;
+  height: auto;
+  min-height: var(--min-height);
   position: relative;
   width: 100%;
 }
@@ -11,7 +16,9 @@
 .bar.bar {
   border-radius: 5px 0 0 5px;
   box-shadow: inset 0 2px 0 0 var(--poll-progress-bar-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
-  height: inherit;
+  position: absolute;
+  top: 0;
+  z-index: 10;
 }
 
 .root.root.active {
