--- a/lib/organisms/poll.css
+++ b/lib/organisms/poll.css
@@ -1,15 +1,27 @@
+:root {
+  --backgroud-color: var(--poll-bg-color, var(--white, #fff));
+  --border-color-edit: var(--poll-edit-border-color, var(--persimmon, #ff7256));
+  --border-color: var(--poll-border-color, var(--mercury, #e9e9e9));
+  --font-size: var(--poll-font-size, initial);
+  --line-height: var(--poll-line-height, 1.2em);
+  --min-width: var(--poll-min-width, 400px);
+  --text-color: var(--poll-text-color, var(--mineShaft, #333));
+  --text-size: var(--poll-text-size, 1em);
+}
+
 .root {
-  background: var(--poll-bg-color, var(--white, #fff));
-  border: 1px solid var(--poll-border-color, var(--mercury, #e9e9e9)) !important;
+  background: var(--backgroud-color);
+  border: 1px solid var(--border-color) !important;
   border-radius: 5px;
   display: block;
-  min-width: var(--poll-min-width, 400px);
+  font-size: var(--font-size);
+  min-width: var(--min-width);
   padding: 20px;
   position: relative;
 }
 
 .edit {
-  border: 1px dashed var(--poll-edit-border-color, var(--persimmon, #ff7256));
+  border: 1px dashed var(--border-color-edit);
 }
 
 .actions {
@@ -44,22 +56,25 @@
 
 .text,
 .aftertext {
-  bottom: 6px;
-  color: var(--mineShaft, #333);
-  font-size: 16px;
-  line-height: 16px;
-  position: absolute;
+  color: var(--text-color);
+  font-size: var(--text-size);
+  line-height: var(--line-height);
+  position: relative;
   z-index: 100;
 }
 
 .aftertext {
   font-weight: var(--poll-result-aftertext-font-weight, 100);
+  position: absolute;
   right: 16px;
+  top: 9px;
 }
 
 .text {
   font-weight: var(--poll-result-text-font-weight, normal);
-  left: 20px;
+  margin-left: 20px;
+  margin-right: 70px;
+  margin-top: 8px;
 }
 
 .text.active,
