Fix radio checked state

--- a/lib/atoms/radio.css
+++ b/lib/atoms/radio.css
@@ -14,30 +14,6 @@
   margin-left: 10px;
 }
 
-/* redefine ui kit filling */
-
-.root.root svg:nth-child(2) > path {
-  fill: #fff !important;
-}
-
-.root.root svg:nth-child(3) > path {
-  fill: rgb(72, 161, 230) !important;
-}
-
-.root.root svg:nth-child(2) g path {
-  fill: #fff !important;
-}
-
-.root.root svg:nth-child(3) g path {
-  fill: #fff !important;
-}
-
-/* eof redefine */
-
-.root.root svg rect {
-  stroke: transparent;
-}
-
 input[type="radio"] ~ svg {
   cursor: pointer;
   height: 20px;
@@ -46,14 +22,32 @@ input[type="radio"] ~ svg {
   width: 20px;
 }
 
+/* redefine ui kit filling */
+
+.root.root svg:nth-child(2) path {
+  fill: var(--white, #fff);
+}
+
+.root.root svg:nth-child(3) path {
+  fill: var(--pictonBlue, #48a1e6);
+}
+
+.root.root svg:nth-child(3) path:last-child {
+  fill: var(--white, #fff);
+}
+
+/* eof redefine */
+
 input[type="radio"] ~ svg:nth-child(3) {
   display: none;
 }
 
-input[type="radio"]:hover ~ svg:nth-child(2) {
+input[type="radio"]:hover ~ svg:nth-child(2),
+input[type="radio"]:checked ~ svg:nth-child(3) {
   filter: drop-shadow(0 4px 4px rgba(72, 161, 230, 0.2));
 }
 
+/* stylelint-disable-next-line no-descending-specificity */
 input[type="radio"]:hover ~ svg:nth-child(2) path {
   stroke: var(--pictonBlue, #48a1e6);
 }
