--- a/lib/atoms/progress.css
+++ b/lib/atoms/progress.css
@@ -1,25 +1,32 @@
+:root {
+  --min-height: var(--wc-poll-progress-min-height, 32px);
+}
+
 .root.root {
-  background-color: var(--poll-progress-bg-color, var(--wildSand, #f6f6f6));
+  background-color: var(--wc-poll-progress-bg-color, var(--wildSand, #f6f6f6));
   border-radius: 5px;
-  box-shadow: inset 0 2px 0 0 var(--poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
-  color: var(--poll-progress-color, var(--mystic, #e7e9f2));
-  height: 32px;
+  box-shadow: inset 0 2px 0 0 var(--wc-poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
+  color: var(--wc-poll-progress-color, var(--mystic, #e7e9f2));
+  height: auto;
+  min-height: var(--min-height);
   position: relative;
   width: 100%;
 }
 
 .bar.bar {
   border-radius: 5px 0 0 5px;
-  box-shadow: inset 0 2px 0 0 var(--poll-progress-bar-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
-  height: inherit;
+  box-shadow: inset 0 2px 0 0 var(--wc-poll-progress-bar-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
+  position: absolute;
+  top: 0;
+  z-index: 10;
 }
 
 .root.root.active {
-  background-color: var(--poll-progress-bg-color-active, var(--wildSand, #f6f6f6));
-  color: var(--poll-progress-color-active, var(--mystic, #e7e9f2));
+  background-color: var(--wc-poll-progress-bg-color-active, var(--wildSand, #f6f6f6));
+  color: var(--wc-poll-progress-color-active, var(--mystic, #e7e9f2));
 }
 
 .root.root.selected {
-  background-color: var(--poll-progress-bg-color-selected, var(--wildSand, #f6f6f6));
-  color: var(--poll-progress-color-selected, var(--pattensBlue, #d4ecff));
+  background-color: var(--wc-poll-progress-bg-color-selected, var(--wildSand, #f6f6f6));
+  color: var(--wc-poll-progress-color-selected, var(--pattensBlue, #d4ecff));
 }
