--- a/lib/organisms/poll.css
+++ b/lib/organisms/poll.css
@@ -1,15 +1,31 @@
+:root {
+  --backgroud-color: var(--wc-poll-bg-color, var(--white, #fff));
+  --border-color-edit: var(--wc-poll-edit-border-color, var(--persimmon, #ff7256));
+  --border-color: var(--wc-poll-border-color, var(--mercury, #e9e9e9));
+  --font-size: var(--wc-poll-font-size, initial);
+  --line-height: var(--wc-poll-line-height, 1.2em);
+  --min-width: var(--wc-poll-min-width, 400px);
+  --text-color: var(--wc-poll-text-color, var(--mineShaft, #333));
+  --text-size: var(--wc-poll-text-size, 1em);
+  --margin: var(--wc-poll-margin, initial);
+  --border: var(--wc-poll-border, 1px solid var(--border-color));
+  --border-edit: var(--wc-poll-border-edit, 1px dashed var(--border-color-edit));
+}
+
 .root {
-  background: var(--poll-bg-color, var(--white, #fff));
-  border: 1px solid var(--poll-border-color, var(--mercury, #e9e9e9)) !important;
+  background: var(--backgroud-color);
+  border: var(--border);
   border-radius: 5px;
   display: block;
-  min-width: var(--poll-min-width, 400px);
+  font-size: var(--font-size);
+  margin: var(--margin);
+  min-width: var(--min-width);
   padding: 20px;
   position: relative;
 }
 
 .edit {
-  border: 1px dashed var(--poll-edit-border-color, var(--persimmon, #ff7256));
+  border: var(--border-edit);
 }
 
 .actions {
@@ -44,46 +60,49 @@
 
 .text,
 .aftertext {
-  bottom: 6px;
-  color: var(--mineShaft, #333);
-  font-size: 16px;
-  line-height: 16px;
-  position: absolute;
+  color: var(--text-color);
+  font-size: var(--text-size);
+  line-height: var(--line-height);
+  position: relative;
   z-index: 100;
 }
 
 .aftertext {
-  font-weight: var(--poll-result-aftertext-font-weight, 100);
+  font-weight: var(--wc-poll-result-aftertext-font-weight, 100);
+  position: absolute;
   right: 16px;
+  top: 9px;
 }
 
 .text {
-  font-weight: var(--poll-result-text-font-weight, normal);
-  left: 20px;
+  font-weight: var(--wc-poll-result-text-font-weight, normal);
+  margin-left: 20px;
+  margin-right: 70px;
+  margin-top: 8px;
 }
 
 .text.active,
 .aftertext.active {
-  color: var(--poll-result-color-active, var(--mineShaft, #333));
+  color: var(--wc-poll-result-color-active, var(--mineShaft, #333));
 }
 
 .aftertext.active {
-  font-weight: var(--poll-result-aftertext-font-weight-active, initial);
+  font-weight: var(--wc-poll-result-aftertext-font-weight-active, initial);
 }
 
 .text.active {
-  font-weight: var(--poll-result-text-font-weight-active, initial);
+  font-weight: var(--wc-poll-result-text-font-weight-active, initial);
 }
 
 .text.selected,
 .aftertext.selected {
-  color: var(--poll-result-color-selected, var(--curiousBlue, #258cdc));
+  color: var(--wc-poll-result-color-selected, var(--curiousBlue, #258cdc));
 }
 
 .aftertext.selected {
-  font-weight: var(--poll-result-aftertext-font-weight-selected, initial);
+  font-weight: var(--wc-poll-result-aftertext-font-weight-selected, initial);
 }
 
 .text.selected {
-  font-weight: var(--poll-result-text-font-weight-selected, initial);
+  font-weight: var(--wc-poll-result-text-font-weight-selected, initial);
 }
