Update poll according to a new build logic

--- a/src/atoms/radio.css
+++ b/src/atoms/radio.css
@@ -1,12 +1,12 @@
 :root {
-  --font-size: var(--wc-poll-font-size, initial);
-  --radio-color: var(--wc-poll-radio-color, var(--concrete, #333));
+  --font-size: initial;
+  --radio-color: #333;
 }
 
-.root.root {
+.radio.radio {
   align-items: normal;
-  color: var(--radio-color);
-  font-size: var(--font-size);
+  color: var(--wc-poll-radio-color, var(--concrete, var(--radio-color)));
+  font-size: var(--wc-poll-font-size, var(--font-size));
 }
 
 .label.label {
@@ -24,15 +24,15 @@ input[type="radio"] ~ svg {
 
 /* redefine ui kit filling */
 
-.root.root svg:nth-child(2) path {
+.radio.radio svg:nth-child(2) path {
   fill: var(--white, #fff);
 }
 
-.root.root svg:nth-child(3) path {
+.radio.radio svg:nth-child(3) path {
   fill: var(--pictonBlue, #48a1e6);
 }
 
-.root.root svg:nth-child(3) path:last-child {
+.radio.radio svg:nth-child(3) path:last-child {
   fill: var(--white, #fff);
 }
 
