--- a/src/atoms/progress.css
+++ b/src/atoms/progress.css
@@ -1,14 +1,14 @@
 :root {
-  --min-height: var(--wc-poll-progress-min-height, 32px);
+  --min-height: 32px;
 }
 
-.root.root {
+.progress.progress {
   background-color: var(--wc-poll-progress-bg-color, var(--wildSand, #f6f6f6));
   border-radius: 5px;
   box-shadow: inset 0 2px 0 0 var(--wc-poll-progress-bsh-color, var(--shadow, rgba(0, 0, 0, 0.06)));
   color: var(--wc-poll-progress-color, var(--mystic, #e7e9f2));
   height: auto;
-  min-height: var(--min-height);
+  min-height: var(--wc-poll-progress-min-height, var(--min-height));
   position: relative;
   width: 100%;
 }
@@ -21,12 +21,12 @@
   z-index: 10;
 }
 
-.root.root.active {
+.progress.progress.active {
   background-color: var(--wc-poll-progress-bg-color-active, var(--wildSand, #f6f6f6));
   color: var(--wc-poll-progress-color-active, var(--mystic, #e7e9f2));
 }
 
-.root.root.selected {
+.progress.progress.selected {
   background-color: var(--wc-poll-progress-bg-color-selected, var(--wildSand, #f6f6f6));
   color: var(--wc-poll-progress-color-selected, var(--pattensBlue, #d4ecff));
 }
