--- a/src/atoms/radio.css
+++ b/src/atoms/radio.css
@@ -7,6 +7,7 @@
   align-items: normal;
   color: var(--wc-poll-radio-color, var(--concrete, var(--radio-color)));
   font-size: var(--wc-poll-font-size, var(--font-size));
+  padding-top: 8px;
 }
 
 .label.label {
@@ -18,7 +19,7 @@ input[type="radio"] ~ svg {
   cursor: pointer;
   height: 20px;
   outline: none;
-  top: 0;
+  top: -2px;
   width: 20px;
 }
 
