--- a/src/atoms/checkbox.css
+++ b/src/atoms/checkbox.css
@@ -1,5 +1,6 @@
-.root {
+.checkbox {
   cursor: pointer;
+  padding-top: 8px;
 }
 
 input[type="checkbox"] {
@@ -7,9 +8,10 @@ input[type="checkbox"] {
   cursor: inherit;
   display: inline-block;
   height: 20px;
+  margin: 0;
   outline: none;
   position: relative;
-  top: 4px;
+  top: 5px;
   width: 20px;
 }
 
